--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     autoRefreshMinutes: 5,
     moeda: "BRL",
     // >>> ARQUIVOS LOCAIS (use um destes e deixe sheetUrl vazio) <<<
-    sheetUrl: "".//"https://docs.google.com/spreadsheets/d/11-eUVwz6axvkVt1io78a15XF859dx0SYHS31TUZJ4cU/gviz/tq?tqx=out:json",
+    sheetUrl: "",//"https://docs.google.com/spreadsheets/d/11-eUVwz6axvkVt1io78a15XF859dx0SYHS31TUZJ4cU/gviz/tq?tqx=out:json",
     localExcelFile: "produtos.xlsx", // ex.: "produtos.xlsx" (mesma pasta do index.html)
     localCsvFile: ""                 // ex.: "produtos.csv" (opcional)
   }
