fix extension photo

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     mapsLink: "https://www.google.com/maps/place/Cart%C3%B3rio+de+Registro+Civil+das+Pessoas+Naturais+do+Subdistrito+da+Vit%C3%B3ria/@-13.002347,-38.522519,17z",
 
     // IMAGEM DO TOPO — coloque o arquivo junto do index.html (ex.: hero.jpg)
-    heroImage: "hero.jpg",
+    heroImage: "hero.jpeg",
 
     // Contato / RSVP / PIX
     whatsappNumber: "71988183846",
