--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     /* HERO PAPEL RASGADO */
     .hero{position:relative; max-width:1200px; margin:24px auto 10px; padding:0 16px;}
     .torn-wrap{position:relative; border-radius:0; box-shadow:var(--shadow)}
-    .torn{width:100%; height:auto; display:block}
+    .torn{width:100%; height:auto; display:block; aspect-ratio:16/10;}
     .hero-overlay{position:absolute; inset:auto 8% 10% 8%; text-align:center; color:white; text-shadow:0 1px 20px rgba(0,0,0,.35)}
     .hero-date{font-size:clamp(16px,2vw,20px); letter-spacing:.22em}
     .hero-names{font-family:"Great Vibes", cursive; font-weight:400; font-size:clamp(42px,5.6vw,74px); margin-top:10px}
