--- a/index.html
+++ b/index.html
@@ -105,28 +105,19 @@
     .product .content{padding:14px; display:flex; flex-direction:column; gap:8px}
     .product .price{font-weight:700}
     .product .actions{display:flex; gap:8px; flex-wrap:wrap; margin-top:auto}
-    /* Garanta que os cards fiquem acima das folhinhas .decor */
-    .product {
-      position: relative;   /* z-index só funciona em elementos posicionados */
-      z-index: 5;           /* qualquer valor > 0 já vence a .decor (que tem z-index:0) */
-    }
-
-    /* (opcional, só por segurança) se algum filho tiver overlay, já vem junto */
-    .product .img,
-    .product .content,
-    .product .actions {
-      position: relative;
-      z-index: 5;
-    }
     .tiny{font-size:12px; color:var(--muted)}
     footer{opacity:.9; margin:40px 0 80px; text-align:center}
 
     /* elementos decorativos (folhas) */
-    .decor{position:fixed; z-index:0; opacity:.7; pointer-events:none}
+    .decor{
+      position: fixed;
+      z-index: -1;          /* empurra abaixo de qualquer item da página */
+      opacity: .7;
+      pointer-events: none; /* continua sem “pegar” cliques */
+    }
     .decor.left{left:-60px; top:110px; width:220px}
     .decor.right{right:-40px; bottom:90px; width:240px}
 
-    
     /* === PIX bloco === */
     .pix-row{display:flex; justify-content:center; gap:10px; flex-wrap:wrap; margin-top:10px}
     .pix-qr{display:flex; justify-content:center; margin-top:14px}
