--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
     .products{display:grid; grid-template-columns:repeat(3,1fr); gap:18px}
     @media(max-width:1000px){.products{grid-template-columns:repeat(2,1fr)}}
     @media(max-width:640px){.products{grid-template-columns:1fr}}
+    /* No mobile, esconda as decorações para não poluir a leitura */
+    @media (max-width: 768px) {
+      .decor { display: none; }
+    }
     .product{background:#fff; border:1px solid var(--edge); border-radius:16px; overflow:hidden; display:flex; flex-direction:column}
     .product .img{aspect-ratio:4/3; background:#eee; display:grid; place-items:center; position:relative; overflow:hidden}
     .product .img img{width:100%; height:100%; object-fit:cover; display:block}
